# dart_modules

./: Readme.md
trimmer/: README.md  pubspec.yaml
trimmer/docs/: CutVideo.cpp
trimmer/example/: README.md  pubspec.yaml
trimmer/example/integration_test/: plugin_integration_test.dart
trimmer/example/lib/: main.dart
trimmer/example/test/: widget_test.dart
trimmer/example/windows/: CMakeLists.txt
trimmer/example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
trimmer/example/windows/runner/: Runner.rc  main.cpp
trimmer/lib/: trimmer.dart  trimmer_platform_interface.dart
trimmer/lib/src/: trimmer.dart  trimmer_method_channel.dart  trimmer_platform_interface.dart  video_thumbnail.dart  video_viewer.dart
trimmer/lib/src/trim_viewer/: trim_viewer.dart
trimmer/lib/src/trim_viewer/fixed_viewer/: fixed_thumbnail_viewer.dart  fixed_trim_viewer.dart
trimmer/lib/src/trim_viewer/scrollable_viewer/: scrollable_thumbnail_viewer.dart  scrollable_trim_viewer.dart
trimmer/test/: trimmer_method_channel_test.dart  trimmer_test.dart
trimmer/windows/: CMakeLists.txt  trimmer_plugin.cpp  trimmer_plugin.h  trimmer_plugin_c_api.cpp
trimmer/windows/include/trimmer/: trimmer_plugin_c_api.h
trimmer/windows/src/: trimmer_plugin.cpp  trimmer_plugin.h  trimmer_plugin_c_api.cpp  utils.cpp
trimmer/windows/src/ffmpeg/: FrameExtractor.cpp  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderManager.cpp  save_file.c
trimmer/windows/test/: trimmer_plugin_test.cpp
